Started refactoring requests to work with comments. Code is not in a workable state yet.